<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="1dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="@dimen/_128sdp"
        android:layout_height="@dimen/_128sdp"
        android:layout_margin="@dimen/_4sdp"
        android:src="@drawable/app_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="12dp">

        <EditText
            android:id="@+id/registerMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/purple_500" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="12dp">

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/purple_500" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/register" />


</LinearLayout>