<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="1dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="@dimen/_4sdp"
                android:focusable="true"
                app:cardCornerRadius="@dimen/_4sdp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true">

                        <ImageView
                            android:id="@+id/ivCoin"
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="@dimen/_90sdp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/ivCoin"
                            android:orientation="vertical"
                            android:padding="@dimen/_4sdp">

                            <LinearLayout
                                android:id="@+id/containerPrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvPriceCurrency"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="2dp"
                                    android:text="@string/coin"
                                    android:textSize="@dimen/_20sdp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvCurrentPrice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_20ssp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:layout_marginBottom="@dimen/_2sdp"
                                android:textSize="@dimen/_15sdp" />

                            <TextView
                                android:id="@+id/tvSymbol"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/containerRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:layout_toStartOf="@+id/tvRefreshInfo"
                    android:elevation="12dp">

                    <EditText
                        android:id="@+id/et_refresh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_av_timer"
                        android:drawablePadding="8dp"
                        android:hint="@string/refresh_time"
                        android:inputType="number"
                        android:textColor="@color/purple_500" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvRefreshInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/ivRefresh"
                    android:paddingBottom="4dp"
                    android:text="@string/sec" />

                <ImageButton
                    android:id="@+id/ivRefresh"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_check_circle" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hashing_algorithm"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAlgorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/change_percentage"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>